Add some changes to the forms
Changed:
1. Color schemes
2. Status form
3. Instructions form
4. Wrong answer form
5. Form1 layout
Deleted:
1. Call friend joker
2. Ask audience joker
Added:
1. Zoom in & out buttons
2. Instructions button

--- a/VP2017/InstructionsForm.resx
+++ b/VP2017/InstructionsForm.resx
@@ -118,17 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="textBox1.Text" xml:space="preserve">
-    <value>Играта има точно 15 прашања.
-Секој точен одговор носи одредена сума на пари.
-Но, точно 3 суми се загарантирани.
-Тоа се 5.000, 125.000 и 4.000.000 денари.
-На екранот се појаува прашањето и вие со маусот треба да кликнете врз одговорот кој го сметате за точен.
-Имате три вида помош, тоа се 50-50, Повикај пријател и Прашај ја публиката.
-Доколку го одговорите прашањето точно, преминувате на следното. 
-Доколку не го одговорите прашањето точно, ја земате последната освоена загарантирана сума и можете да почнете нова игра.
-Ви посакуваме среќа.
-
-
+    <value>Играта има 15 прашања. 
+Прашањата се поделени по тежина во три групи:
+Група 1: Прашања 1-5 со најмала тежина
+Група 2: Прашања 6-10 со средна тежина
+Група 3: Прашања 11-15 со најголема тежина
+Во текот на играта може да искористите помош, но само еднаш.
+Може и да се откажете од играње и одново да ја започнете играта.
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
