--- a/VP2017/InstructionsForm.resx
+++ b/VP2017/InstructionsForm.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="textBox1.Text" xml:space="preserve">
+  <data name="label1.Text" xml:space="preserve">
     <value>Играта има 15 прашања. 
 Прашањата се поделени по тежина во три групи:
 Група 1: Прашања 1-5 со најмала тежина
@@ -125,6 +125,8 @@
 Група 3: Прашања 11-15 со најголема тежина
 Во текот на играта може да искористите помош, но само еднаш.
 Може и да се откажете од играње и одново да ја започнете играта.
+
+
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
