--- a/VP2017/InstructionsForm.resx
+++ b/VP2017/InstructionsForm.resx
@@ -126,6 +126,19 @@
 Во текот на играта може да искористите помош, но само еднаш.
 Може и да се откажете од играње и одново да ја започнете играта.
 
+			Зошто е корисна играта?
+
+Играње на игри кои го поттикнуваат размислувањето и меморијата
+имаат огромно влијание врз постарата популација.
+Имено, откриено е дека мозочната гимнастика го олеснува 
+животот на постарите лица преку подобрување на когнитивните 
+способности, кои пак, се клучен дел од навигацијата низ 
+комплексните задачи кои секој ден се поставуваат пред Вас.
+
+Истражувањата покажале дека лицата кои го стимулираат својот
+мозок преку активности како решавање крстозборки и квизови
+имаат помал ризик од развивање на деменција, како и  подобро
+зачувување на менталниот капацитет во зрелите години.
 
 </value>
   </data>
